--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   json_annotation: ^4.9.0
   intl: ^0.20.1 #date formatting
+  dotted_decoration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
